--- a/Goli-Soda/src/app/shared/login/login.component.html
+++ b/Goli-Soda/src/app/shared/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
     <div class="left-panel">
       <mat-card class="image-card">
-        <img mat-card-image src="assets/Login-Image.png" alt="Goli Soda Login" />
+        <img mat-card-image src="assets\harvest-image.jpeg" alt="Goli Soda Login" />
       </mat-card>
     </div>
   
